# data_structures

./: CMakeLists.txt  README.md
include/catch2/: catch.hpp
include/data_structures/: Node.h  Node2.h  doubly_linked_list.hpp  queue_list.hpp  queue_tab.hpp  singly_linked_list.hpp  stack_list.hpp  stack_tab.hpp
src/: example_test.cpp  main.cpp  test_data_structures.cpp
